[gd_scene load_steps=5 format=3 uid="uid://c6sjvgvyj0y5m"]

[ext_resource type="Texture2D" uid="uid://bi1tuwqlou2cr" path="res://icon.png" id="1"]
[ext_resource type="Script" path="res://Main/Scripts/Enemy/Enemy.gd" id="2"]

[sub_resource type="CircleShape2D" id="2"]
radius = 16.0

[sub_resource type="CircleShape2D" id="3"]
radius = 313.23

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.8, 0.8)

[node name="Icon" type="Sprite2D" parent="AnimatedSprite2D" groups=["Enemy"]]
modulate = Color(1, 0, 0, 1)
texture = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
shape = SubResource("2")

[node name="RayPlayer" type="RayCast2D" parent="."]
modulate = Color(0, 0.298039, 1, 1)
scale = Vector2(3, 3)
target_position = Vector2(50, 0)
collision_mask = 4

[node name="RayPoint" type="RayCast2D" parent="."]
modulate = Color(0.0313726, 1, 0, 1)
scale = Vector2(2, 2)
target_position = Vector2(50, 0)

[node name="RayScent" type="RayCast2D" parent="."]
visible = false
modulate = Color(0.945098, 1, 0, 1)
collision_mask = 2

[node name="StateManager" type="Node" parent="."]

[node name="idle_state" type="Node" parent="StateManager"]

[node name="patrolling_state" type="Node" parent="StateManager"]

[node name="hunting_state" type="Node" parent="StateManager"]

[node name="FindArea" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2

[node name="AreaFinder" type="CollisionShape2D" parent="FindArea"]
scale = Vector2(0.8, 0.8)
shape = SubResource("3")

[node name="EnemyTerrorLVL4" type="Area2D" parent="."]
visible = false

[node name="RadiusLVL1" type="CollisionShape2D" parent="EnemyTerrorLVL4"]
scale = Vector2(0.8, 0.8)
shape = SubResource("3")

[node name="EnemyTerrorLVL1" type="Area2D" parent="."]
visible = false

[node name="RadiusLVL1" type="CollisionShape2D" parent="EnemyTerrorLVL1"]
scale = Vector2(0.8, 0.8)
shape = SubResource("3")

[node name="EnemyTerrorLVL3" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4

[node name="RadiusLVL3" type="CollisionShape2D" parent="EnemyTerrorLVL3"]
scale = Vector2(0.8, 0.8)
shape = SubResource("3")

[node name="ChaseTime" type="Timer" parent="."]
wait_time = 5.0

[node name="Hunt_Line" type="Line2D" parent="."]
scale = Vector2(2, 2)
width = 5.0
default_color = Color(1, 0, 0, 1)

[node name="Patrol_Line" type="Line2D" parent="."]
scale = Vector2(2, 2)
width = 5.0
default_color = Color(0.12549, 1, 0, 1)

[node name="Scent_Line" type="Line2D" parent="."]
scale = Vector2(10, 5)

[connection signal="area_entered" from="EnemyTerrorLVL4" to="." method="_on_EnemyTerrorLVL_area_entered"]
[connection signal="area_exited" from="EnemyTerrorLVL4" to="." method="_on_EnemyTerrorLVL_area_exited"]
[connection signal="area_entered" from="EnemyTerrorLVL1" to="." method="_on_EnemyTerrorLVL_area_entered"]
[connection signal="area_exited" from="EnemyTerrorLVL1" to="." method="_on_EnemyTerrorLVL_area_exited"]
[connection signal="timeout" from="ChaseTime" to="." method="_on_ChaseTime_timeout"]
